--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "10.24.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
